--- a/beta/index.html
+++ b/beta/index.html
@@ -218,13 +218,13 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
        <div id="tiles-searchbox" class="nobullet" style="display: none;">
        </div>
        <nav id="tiles-add-button" class="fab-container">  
-    <a href="?app=10" class="buttons"><center><span style="font-size:30px;" class="glyphicon glyphicon-bookmark"></center></span></a>
+    <a href="?app=10" class="buttons"><center><span style="font-size:30px;padding:10px;" class="glyphicon glyphicon-bookmark"></center></span></a>
     
-    <a href="?app=4" class="buttons"><center><span style="font-size:30px;" class="glyphicon glyphicon-th-list"></center></span></a>
+    <a href="?app=4" class="buttons"><center><span style="font-size:30px;padding:10px;" class="glyphicon glyphicon-th-list"></center></span></a>
     
-    <a href="?app=3" class="buttons"><center><span style="font-size:30px;" class="glyphicon glyphicon-pencil"></center></span></a>
+    <a href="?app=3" class="buttons"><center><span style="font-size:30px;padding:10px;" class="glyphicon glyphicon-pencil"></center></span></a>
 
-    <a class="buttons"><center><span style="font-size:30px; padding: 10px;" class="glyphicon glyphicon-plus"></span></center>
+    <a class="buttons"><center><span style="font-size:30px;padding: 10px;" class="glyphicon glyphicon-plus"></span></center>
     </a>
   </nav>
   </div>
