--- a/beta/index.html
+++ b/beta/index.html
@@ -57,7 +57,6 @@
                 <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
                 <li><a href="https://proudloyaltier.github.io/timedia/beta/tishare/">TiShare <span class="glyphicon glyphicon-share"></span></a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
                 <li><a href="?app=4">TiSheets <span class="glyphicon glyphicon-th-list"></span></a></li>
                 <li><a href="?app=10">TiBookmarks <span class="glyphicon glyphicon-bookmark"></span></a></li>
                 <li role="separator" class="divider"></li>
@@ -175,7 +174,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button onclick="saveDoc(); window.location.href = '?app=7';" class="btn btn-primary">Save</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
-<button id="tidocs-edit" style="display: none; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;" onclick="editDoc()" class="btn btn-primary"><span class="glyphicon glyphicon-pencil"></span></button>
+<button id="tidocs-edit" style="display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;" onclick="editDoc()" class="btn btn-primary"><span class="glyphicon glyphicon-pencil"></span></button>
 <button id="tidocs-reader" style="display: none;" onclick="docReader()" class="btn btn-primary">Reader View</button>
 </div>
   
