--- a/beta/index.html
+++ b/beta/index.html
@@ -57,6 +57,7 @@
                 <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
                 <li><a href="https://proudloyaltier.github.io/timedia/beta/tishare/">TiShare <span class="glyphicon glyphicon-share"></span></a></li>
                 <li role="separator" class="divider"></li>
+                <li><a href="?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
                 <li><a href="?app=4">TiSheets <span class="glyphicon glyphicon-th-list"></span></a></li>
                 <li><a href="?app=10">TiBookmarks <span class="glyphicon glyphicon-bookmark"></span></a></li>
                 <li role="separator" class="divider"></li>
