--- a/beta/index.html
+++ b/beta/index.html
@@ -272,7 +272,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 </table><br>
    <button class="btn btn-success" id="tisheets-add-row" onclick="newRow()">Add Row</button>
    <button class="btn btn-success" id="tisheets-save" onclick="saveSheet(); window.location.href = '?app=7';">Save</button>
-   <button class="btn btn-success" id="tisheets-edit" onclick="editSheet()" style="display: none; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;"><span class='glyphicon glyphicon-pencil'></span></button>
+   <button class="btn btn-success" id="tisheets-edit" onclick="editSheet()" style="display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;"><span class='glyphicon glyphicon-pencil'></span></button>
    <button class="btn btn-success" id="tisheets-reader" onclick="sheetReader()" style="display: none;">Reader View</button>
  <!-- <button class="btn btn-success" onclick="newColumn()">Add Column</button>-->
 </div>
