--- a/beta/index.html
+++ b/beta/index.html
@@ -175,8 +175,8 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button onclick="saveDoc(); window.location.href = '?app=7';" class="btn btn-primary">Save</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
-<button id="tidocs-edit" style="display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;" onclick="editDoc()" class="btn btn-primary"><span class="glyphicon glyphicon-pencil"></span></button>
-<button id="tidocs-reader" style="display: none;" onclick="docReader()" class="btn btn-primary">Reader View</button>
+<button id="tidocs-edit" style="float: left; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;" onclick="editDoc()" class="btn btn-primary"><span class="glyphicon glyphicon-pencil"></span></button>
+<button id="tidocs-reader" style="float: right; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; right: 10px;" onclick="docReader()" class="btn btn-primary"><span class="glyphicon glyphicon-align-justify"></span></button>
 </div>
   
      <div id="settings" style="display: none;">
