--- a/beta/index.html
+++ b/beta/index.html
@@ -170,7 +170,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="saveDoc()"><span class="glyphicon glyphicon-floppy-save"></span></button>
       <br><br><br><br>
       </div>
-      <h5 style="outline: none;" id="content" contenteditable="true" autofocus></h5><br>
+      <h5 class="tidocsContent" style="outline: none;" id="content" contenteditable="true" autofocus></h5><br>
 
       <button onclick="saveDoc(); window.location.href = '?app=7';" class="btn btn-primary">Save</button>
   </div>
