--- a/beta/index.html
+++ b/beta/index.html
@@ -167,12 +167,12 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button style='float: left; border-radius: 0px; box-shadow: none;'class='btn btn-primary' onclick="document.execCommand('subscript');">xₐ</button>
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('undo');">↰</button>
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('redo');">↱</button>
-      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="saveDoc()"><span class="glyphicon glyphicon-floppy-save"></span></button>
+      <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="saveDoc()"><span class="glyphicon glyphicon-floppy-save"></span></button>-->
       <br><br><br><br>
       </div>
       <h5 class="tidocsContent" style="outline: none;" id="content" contenteditable="true" autofocus></h5><br>
 
-      <button onclick="saveDoc(); window.location.href = '?app=7';" class="btn btn-primary">Save</button>
+      <!--<button onclick="saveDoc(); window.location.href = '?app=7';" class="btn btn-primary">Save</button>-->
   </div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="float: left; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;" onclick="editDoc()" class="btn btn-primary"><span class="glyphicon glyphicon-pencil"></span></button>
