--- a/beta/index.html
+++ b/beta/index.html
@@ -248,7 +248,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
         border-collapse: collapse;
      }
    </style>
-<table style="width: 100%; outline: none;" contenteditable="true" id="tisheets-table">
+<table style="width: 100%; outline: none;" contenteditable="true" id="tisheets-table" class='tisheetsContent'>
   <tr id="tisheets-cell0">
     <th>Name</th>
     <th>Name</th> 
