--- a/beta/index.html
+++ b/beta/index.html
@@ -239,7 +239,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button style='float: left; border-radius: 0px; box-shadow: none;'class='btn btn-success' onclick="document.execCommand('subscript');">xₐ</button>
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('undo');">↰</button>
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('redo');">↱</button>
-      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="saveSheet()"><span class="glyphicon glyphicon-floppy-save"></span></button>
+      <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="saveSheet()"><span class="glyphicon glyphicon-floppy-save"></span></button>-->
    <br><br><br><br>
    </div>
    <style>
@@ -271,7 +271,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   </tr>
 </table><br>
    <button class="btn btn-success" id="tisheets-add-row" onclick="newRow()">Add Row</button>
-   <button class="btn btn-success" id="tisheets-save" onclick="saveSheet(); window.location.href = '?app=7';">Save</button>
+   <!--<button class="btn btn-success" id="tisheets-save" onclick="saveSheet(); window.location.href = '?app=7';">Save</button>-->
    <button class="btn btn-success" id="tisheets-edit" onclick="editSheet()" style="display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;"><span class='glyphicon glyphicon-pencil'></span></button>
    <button class="btn btn-success" id="tisheets-reader" style="float: right; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; right: 10px;" onclick="sheetReader()"><span class="glyphicon glyphicon-align-justify"></span></button>
  <!-- <button class="btn btn-success" onclick="newColumn()">Add Column</button>-->
