--- a/beta/index.html
+++ b/beta/index.html
@@ -106,7 +106,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 <p style="font-size: 3px; overflow-x: scroll;">
 Stephen Hawkings Stephen Hawkings Stephen Hawkings Stephen Hawkings_________________________________<br>
 Stephen Hawkings Stephen Hawkings Stephen Hawkings Stephen Hawkings_________________________________<br>
-Stephen Hawkings Stephen Hawkings Stephen Hawkings Stephen Hawkings____________Stephen Hawkings_____<br>
+Stephen Hawkings Stephen Hawkings Stephen Hawkings Stephen Hawkings________Stephen Hawkings_____<br>
 _________________________Stephen Hawkings__________________________________Stephen Hawkings_____<br>
 _________________________Stephen Hawkings__________________________________Stephen Hawkings_____<br>
 _________________________Stephen Hawkings__________________________________Stephen Hawkings_____<br>
