--- a/beta/index.html
+++ b/beta/index.html
@@ -332,8 +332,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     </ul>
   </nav>
   <!--end of context menu -->
-<h5 style="display: none;" id="view"></h5><br>
-<button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
+    <script src="js/alertify.js"></script>
     <script src="js/home.js"></script>
     <script src="js/cmenu.js"></script>
     <script src="js/main.js"></script>
