--- a/beta/index.html
+++ b/beta/index.html
@@ -169,7 +169,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('justifyCenter');"><span class="glyphicon glyphicon-align-center"></span></button>
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('justifyRight');"><span class="glyphicon glyphicon-align-right"></span></button>
       <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
-      <div style="width:300px;margin:100px auto;">
+      <div style="width:300px;">
       <div class="fontSelect">
       <div class="arrow-down"></div>
       </div>
@@ -250,7 +250,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('justifyCenter');"><span class="glyphicon glyphicon-align-center"></span></button>
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('justifyRight');"><span class="glyphicon glyphicon-align-right"></span></button>
       <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
-      <div style="width:300px;margin:100px auto;">
+      <div style="width:300px;">
       <div class="fontSelect">
       <div class="arrow-down"></div>
       </div>
