--- a/beta/index.html
+++ b/beta/index.html
@@ -170,7 +170,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('justifyRight');"><span class="glyphicon glyphicon-align-right"></span></button>
       <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
       <div style="width:300px;">
-      <div class="fontSelect">
+      <div id='fontSelect' class="fontSelect">
       <div class="arrow-down"></div>
       </div>
       </div>
@@ -251,7 +251,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('justifyRight');"><span class="glyphicon glyphicon-align-right"></span></button>
       <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
       <div style="width:300px;">
-      <div class="fontSelect">
+      <div id='fontSelect' class="fontSelect">
       <div class="arrow-down"></div>
       </div>
       </div>
