--- a/beta/index.html
+++ b/beta/index.html
@@ -258,7 +258,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('justifyLeft');"><span class="glyphicon glyphicon-align-left"></span></button>
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('justifyCenter');"><span class="glyphicon glyphicon-align-center"></span></button>
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('justifyRight');"><span class="glyphicon glyphicon-align-right"></span></button>
-      <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="showTiWorkColorSheets()"><span class='glyphicon glyphicon-tint'></span></button>-->
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="showTiWorkColorSheets()"><span class='glyphicon glyphicon-tint'></span></button>
       <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
       <button id='fontSelectSheets' class="btn btn-success" style='float: left; border-radius: 0px; box-shadow: none;'>
       <div class="arrow-down"></div>
@@ -267,15 +267,15 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('redo');">↱</button>
       <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="saveSheet()"><span class="glyphicon glyphicon-floppy-save"></span></button>-->
    <br><br>
-   <!--<div style="display: none;"class='jumbotron container' id='fontColorDivSheets'>
+      <div style="display: none;"class='jumbotron container' id='fontColorDivSheets'>
       <p style='font-size: 30px;'>
       Change Text Color
       </p>
-      <input style="width: 5%;" id="fontColor" class="jscolor form-control" value="000000"><br>
-      <button onclick='setColor();' class='btn btn-primary'>
+      <input style="width: 5%;" id="fontColorSheets" class="jscolor form-control" value="000000"><br>
+      <button onclick='setColorSheets();' class='btn btn-success'>
       Set Color
       </button>
-      </div>-->
+      </div>
    <br><br>
    </div>
    <style>
