--- a/beta/index.html
+++ b/beta/index.html
@@ -279,31 +279,31 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
    <br><br>
    </div>
    <style>
-     table, th, td {
+     table, th {
         border: 1px solid gray;
         border-collapse: collapse;
      }
    </style>
 <table style="width: 100%; outline: none;" contenteditable="true" id="tisheets-table" class='tisheetsContent'>
-  <tr id="tisheets-cell0">
-    <th>Name</th>
-    <th>Name</th> 
-    <th>Name</th>
+  <tr>
+    <th>Value</th>
+    <th>Value</th> 
+    <th>Value</th>
   </tr>
   <tr>
-    <td>Name</td>
-    <td>Value</td>
-    <td>Value</td>
+    <th>Value</th>
+    <th>Value</th>
+    <th>Value</th>
   </tr>
-  <tr id="tisheets-cell1">
-    <td>Name</td>
-    <td>Value</td>
-    <td>Value</td>
+  <tr>
+    <th>Value</th>
+    <th>Value</th>
+    <th>Value</th>
   </tr>
-  <tr id="tisheets-cell2">
-    <td>Name</td>
-    <td>Value</td>
-    <td>Value</td>
+  <tr>
+    <th>Value</th>
+    <th>Value</th>
+    <th>Value</th>
   </tr>
 </table><br>
    <button class="btn btn-success" id="tisheets-add-row" onclick="newRow()">Add Row</button>
