--- a/beta/index.html
+++ b/beta/index.html
@@ -310,7 +310,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
    <!--<button class="btn btn-success" id="tisheets-save" onclick="saveSheet(); window.location.href = '?app=7';">Save</button>-->
    <button class="btn btn-success" id="tisheets-edit" onclick="editSheet()" style="display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;"><span class='glyphicon glyphicon-pencil'></span></button>
    <button class="btn btn-success" id="tisheets-reader" style="float: right; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; right: 10px;" onclick="sheetReader()"><span class="glyphicon glyphicon-align-justify"></span></button>
- <!-- <button class="btn btn-success" onclick="newColumn()">Add Column</button>-->
+   <button class="btn btn-success" onclick="newColumn()">Add Column</button>
 </div>
 <div id="tismile" style="display: none;">
   <h3>TiSmile <b>Beta</b></h3>
