--- a/beta/index.html
+++ b/beta/index.html
@@ -279,7 +279,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
    <br><br>
    </div>
    <style>
-     table, th {
+     table, th, td {
         border: 1px solid gray;
         border-collapse: collapse;
      }
