--- a/beta/login.html
+++ b/beta/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" sizes="57x57" href="other resources/app-icon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="other resources/app-icon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="other resources/app-icon/apple-icon-72x72.png">
