--- a/beta/signup.html
+++ b/beta/signup.html
@@ -1,4 +1,5 @@
 <script src="js/nohacking.js"></script>
+<link rel="stylesheet" href="other resources/style.css" crossorigin="anonymous">
 <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
 <script>
   function signup() {
