--- a/beta/logout.html
+++ b/beta/logout.html
@@ -1,4 +1,5 @@
 <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
+<script src="js/db.js"></script>
 <script>
   if (localStorage.faces !== undefined) {
     var localFaces = localStorage.faces;
