--- a/beta/signup.html
+++ b/beta/signup.html
@@ -5,7 +5,7 @@
 <script>
   function signup() {
  if (document.getElementById('username') !== "" && document.getElementById('password').value) {
-  firebase.auth().createUserWithEmailAndPassword(document.getElementById('username').value, document.getElementById('password').value).catch(function(error) {
+  firebase.auth().createUserWithEmailAndPassword(document.getElementById('username').value + "@timediatied.com", document.getElementById('password').value).catch(function(error) {
   var errorCode = error.code;
   var errorMessage = error.message;
   console.log(errorCode + " " + errorMessage);
