--- a/beta/signup.html
+++ b/beta/signup.html
@@ -16,8 +16,11 @@
   }
 }
 </script>
+<div class='container'>
 <center>
-<input class='form control' id='username' placeholder='Username'>
-<input class='form control' id='password' placeholder='Password'>
+<h3> Sign Up For TiMedia </h3>
+<input class='form-control' id='username' placeholder='Username'>
+<input class='form-control' id='password' placeholder='Password'>
 <button class='btn btn-primary' onclick='signup()'>Sign Up</button>
 </center>
+</div>
