--- a/beta/login.html
+++ b/beta/login.html
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <a class="navbar-brand" href="#">TiMedia <b>2</b></a>
           <ul class="nav navbar-nav navbar-right">
-            <li><a onclick="function() {document.getElementById('signup').style.display = 'block'; document.getElementById('login').remove(); }"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a onclick="function() {document.getElementById('signup').style.display = 'block'; document.getElementById('login-user').remove(); }"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
           </ul>
         </div>
       </div>
@@ -88,7 +88,7 @@
 <center>
 <h3> Sign Up For TiMedia </h3>
 <input class='form-control' id='username' placeholder='Username'>
-<input class='form-control' id='password' placeholder='Password'>
+<input class='form-control' id='password' placeholder='Password'><br>
 <button class='btn btn-primary' onclick='signup()'>Sign Up</button>
 </center>
 </div>
