--- a/beta/login.html
+++ b/beta/login.html
@@ -56,7 +56,7 @@
     <h3>Login</h3><br>
   
       Username<br>
-      <input type="text" id="login-username" class="form-control" onchange="document.getElementById('login-password').focus();"><br>
+      <input type="text" id="login-username" class="form-control" onchange="document.getElementById('login-password').focus();" autofocus><br>
   
       Password<br>
       <input type="password" id="login-password" class="form-control" onchange="login()"><br>
