--- a/beta/login.html
+++ b/beta/login.html
@@ -81,6 +81,7 @@
   var errorCode = error.code;
   var errorMessage = error.message;
   console.log(errorCode + " " + errorMessage);
+  alert("There has been an error!:" + errorMessage)
    });
   } else {
     alert('Please enter a username and password!')
